--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,7 @@
 
                     <li><a href="#">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
                 </ul>
             </div>
         </nav>
